fix sideways scroll on small res

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,8 @@
 
 body {
   background-color: #f2f2f2;
+  width: 100%;
+  overflow: hidden;
 }
 
 #head {
@@ -45,22 +47,12 @@ body {
   position: relative;
   overflow: visible;
   padding-bottom: 12rem;
+  width: 100%;
+  height: 0;
 }
 
-/*#white {
-  position: absolute;
-  top:0 !important; 
-  width: 0;
-  height: 0;
-  border-left: 20rem solid transparent;
-  border-right: 20rem solid transparent;
-  border-top: 20rem solid white;
-  z-index: 2;
-  pointer-events:none;
-}*/
-
 #rotated {
-    position: relative;
+    position: absolute;
     display: inline-block;
     height: 0; 
     width:100%;
